# Hotel-booking-Backend-Genworx

./: .env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0365292165ad_initial_schema.py  04786465da3a_create_properties_table.py  7a62fc832732_initial_schema.py  dad499d48662_replace_is_active_with_user_status.py
app/: alembic.ini  main.py  routers.py
app/Service/: room_type.py
app/api/: router.py
app/core/: config.py  jwt.py  password.py
app/database/: __init__.py  base.py  base_model.py  base_table.py  engine.py  session.py
app/dependencies/: auth.py  authorization.py
app/exceptions/: room_exceptions.py
app/models/: __init__.py  address.py  amenities.py  favorites.py  permissions.py  property.py  propertyamenities.py  propertyimages.py  roles.py  roles_permission.py  userRoles.py  users.py  users_roles.py
app/repositories/: DashboardRepository.py  __init__.py  address_repository.py  amenity_repository.py  auth_repositories.py  favorite_repository.py  property_repository.py  propertyamenities_repository.py  propertyimages_repository.py  super_admin_repository.py
app/schema/: ApiResponce.py  __init__.py  amenity_schema.py  auth.py  dashboardSchema.py  favorite_schema.py  login.py  permission.py  property_schema.py  propertyamenities_schema.py  propertyimages_schema.py  role.py  role_permission.py  super_admin_property_schema.py  super_admin_schema.py  user.py
app/seed/: seed_data.py
app/services/: __inti__.py  (+9 more)
scripts/: seed_rbac.py
tests/: test_database.py  test_dependency.py  test_jwt.py  test_metadata.py  test_password.py
(+164 files in other folders)
