[project]
name = "project-hotel"
version = "0.1.0"
description = "Hotel Booking Backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",

    "sqlalchemy==2.0.43",
    "alembic==1.16.5",

    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",

    "pydantic==2.13.4",
    "pydantic-settings==2.10.1",

    "python-jose[cryptography]==3.5.0",

    "passlib==1.7.4",
    "bcrypt==4.0.1",

    "python-multipart==0.0.20",
    "email-validator==2.3.0",

    "greenlet==3.2.4",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "httpx==0.28.1",
    "isort==6.0.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.13.1",
]